--- a/screenplay/src/main/res/layout/stage_login.xml
+++ b/screenplay/src/main/res/layout/stage_login.xml
@@ -1,5 +1,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -36,7 +37,8 @@
 
       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
-          android:layout_height="wrap_content">
+          android:layout_height="wrap_content"
+          app:passwordToggleEnabled="true">
 
         <EditText
             android:id="@+id/password"
