--- a/conductor/src/main/res/layout/activity_main.xml
+++ b/conductor/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/stage_container"
+    android:id="@+id/controller_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.github.johnkil.screenplay.MainActivity"/>
+    tools:context="com.github.johnkil.conductor.MainActivity"/>
